tests/ui/once_time_attr_renamed.stderr
error: `time` was renamed in a prior major release; use `ttl_secs = ...` (or `ttl = "Duration::from_secs(...)"` / `ttl_millis = ...`)
 --> tests/ui/once_time_attr_renamed.rs:4:4
  |
4 | fn my_fn(k: i32) -> i32 {
  |    ^^^^^
